# Netology05_HW10

./: .gitignore
N05_HW10_Task01/: CMakeLists.txt  N05_HW10_Task01.cpp
N05_HW10_Task02/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  N05_HW10_Task02.cpp  Parallelogram.h  Poly.cpp  Poly.h  Rect.h  Rhombus.h  Shape.cpp  Shape.h  Square.h  Square_Triangle.cpp  Square_Triangle.h  Triangle.cpp  Triangle.h
