cmake_minimum_required(VERSION 3.10)
project(N05_HW10_Task02)
add_executable(cmake-Task02 N05_HW10_Task02.cpp Equilateral_Triangle.h Equilateral_Triangle.cpp Isosceles_Triangle.h Isosceles_Triangle.cpp Parallelogram.h Parallelogram.cpp Poly.h Poly.cpp Rect.h Rect.cpp Rhombus.h Rhombus.cpp Shape.h Shape.cpp Square.h Square.cpp Square_Triangle.h Square_Triangle.cpp Triangle.h Triangle.cpp)